--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
-    <!-- [FIX] 重新加入遺漏的 date-fns 日期處理函式庫 -->
     <script src="https://cdn.jsdelivr.net/npm/date-fns@2.29.3/cdn.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
@@ -67,6 +66,8 @@
     </div>
 
     <script>
+    // [FIX] 使用 DOMContentLoaded 事件確保所有腳本都載入後才執行
+    document.addEventListener('DOMContentLoaded', () => {
         const baselineDateEl = document.getElementById('baseline-date');
         const timeUnitEl = document.getElementById('time-unit');
         const baselineValueEl = document.getElementById('baseline-value');
@@ -344,6 +345,7 @@
         }
 
         initialize();
+    });
     </script>
 </body>
 </html>
