--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PTT 八卦版輿情分析平台</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/date-fns@2.29.3/cdn.min.js"></script>
+    <!-- [FIX] Added defer attribute to all scripts to ensure correct execution order -->
+    <script src="https://cdn.tailwindcss.com" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/date-fns@2.29.3/cdn.min.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         body { font-family: 'Inter', 'Noto Sans TC', sans-serif; }
@@ -66,18 +67,20 @@
     </div>
 
     <script>
-    // [FIX] 使用 window.addEventListener('load', ...) 確保所有資源 (包含 date-fns) 都已載入
-    window.addEventListener('load', () => {
-        // 從全域物件中預先解構出所有會用到的 date-fns 函式
-        const { format, setMinutes, startOfHour } = window.dateFns;
+    // [FIX] 使用 DOMContentLoaded，並配合 script 標籤的 defer 屬性，這是最穩健的作法
+    document.addEventListener('DOMContentLoaded', () => {
+        // 只有在 DOMContentLoaded 觸發後，才去存取全域物件
+        const dateFns = window.dateFns;
 
-        // [FIX] 加入一個檢查，確保函式庫已成功載入
-        if (typeof format !== 'function' || typeof setMinutes !== 'function' || typeof startOfHour !== 'function') {
+        if (typeof dateFns === 'undefined' || typeof dateFns.format !== 'function') {
             console.error("Fatal Error: date-fns library failed to load correctly.");
             document.getElementById('loading-text').innerHTML = "關鍵日期函式庫載入失敗，請刷新頁面重試。";
             document.getElementById('analysis-text').innerHTML = "無法初始化，請刷新頁面。";
             return; // 停止執行
         }
+
+        // 只有在確認 dateFns 存在後，才安全地解構和使用它
+        const { format, setMinutes, startOfHour } = dateFns;
 
         const baselineDateEl = document.getElementById('baseline-date');
         const timeUnitEl = document.getElementById('time-unit');
