--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PTT 八卦版輿情分析平台</title>
-    <!-- [FIX] Added defer attribute to all scripts to ensure correct execution order -->
-    <script src="https://cdn.tailwindcss.com" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/date-fns@2.29.3/cdn.min.js" defer></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/date-fns@2.29.3/cdn.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         body { font-family: 'Inter', 'Noto Sans TC', sans-serif; }
@@ -67,20 +66,9 @@
     </div>
 
     <script>
-    // [FIX] 使用 DOMContentLoaded，並配合 script 標籤的 defer 屬性，這是最穩健的作法
-    document.addEventListener('DOMContentLoaded', () => {
-        // 只有在 DOMContentLoaded 觸發後，才去存取全域物件
-        const dateFns = window.dateFns;
-
-        if (typeof dateFns === 'undefined' || typeof dateFns.format !== 'function') {
-            console.error("Fatal Error: date-fns library failed to load correctly.");
-            document.getElementById('loading-text').innerHTML = "關鍵日期函式庫載入失敗，請刷新頁面重試。";
-            document.getElementById('analysis-text').innerHTML = "無法初始化，請刷新頁面。";
-            return; // 停止執行
-        }
-
-        // 只有在確認 dateFns 存在後，才安全地解構和使用它
-        const { format, setMinutes, startOfHour } = dateFns;
+    // [FIX] 使用輪詢檢查 (Polling Check) 來確保所有函式庫都已準備就緒
+    function mainApp() {
+        const { format, setMinutes, startOfHour } = window.dateFns;
 
         const baselineDateEl = document.getElementById('baseline-date');
         const timeUnitEl = document.getElementById('time-unit');
@@ -359,7 +347,33 @@
         }
 
         initialize();
-    });
+    }
+
+    // --- Polling Check to Start the App ---
+    function checkAndRun() {
+        let attempts = 0;
+        const maxAttempts = 50; // Try for 5 seconds (50 * 100ms)
+
+        const intervalId = setInterval(() => {
+            // Check if all necessary libraries are loaded
+            if (window.Chart && window.dateFns && typeof window.dateFns.format === 'function') {
+                clearInterval(intervalId);
+                console.log("所有函式庫已成功載入，正在啟動應用程式...");
+                mainApp(); // Run the main application
+            } else {
+                attempts++;
+                if (attempts > maxAttempts) {
+                    clearInterval(intervalId);
+                    console.error("Fatal Error: A required library (Chart.js or date-fns) failed to load after 5 seconds.");
+                    document.getElementById('loading-text').innerHTML = "關鍵函式庫載入超時，請檢查網路連線並刷新頁面。";
+                }
+            }
+        }, 100);
+    }
+
+    // Start the check when the window is fully loaded
+    window.addEventListener('load', checkAndRun);
+
     </script>
 </body>
 </html>
