--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PTT 八卦版輿情分析平台</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/date-fns@2.29.3/cdn.min.js"></script>
+    <!-- [FIX] 更換為速度更快的 cdnjs.cloudflare.com CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-adapter-date-fns/2.0.0/chartjs-adapter-date-fns.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/2.29.3/date-fns.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
         body { font-family: 'Inter', 'Noto Sans TC', sans-serif; }
@@ -66,7 +67,6 @@
     </div>
 
     <script>
-    // [FIX] 使用輪詢檢查 (Polling Check) 來確保所有函式庫都已準備就緒
     function mainApp() {
         const { format, setMinutes, startOfHour } = window.dateFns;
 
@@ -349,30 +349,29 @@
         initialize();
     }
 
-    // --- Polling Check to Start the App ---
     function checkAndRun() {
         let attempts = 0;
-        const maxAttempts = 50; // Try for 5 seconds (50 * 100ms)
+        // [FIX] 延長超時時間到 10 秒
+        const maxAttempts = 100; // Try for 10 seconds (100 * 100ms)
 
         const intervalId = setInterval(() => {
-            // Check if all necessary libraries are loaded
             if (window.Chart && window.dateFns && typeof window.dateFns.format === 'function') {
                 clearInterval(intervalId);
                 console.log("所有函式庫已成功載入，正在啟動應用程式...");
-                mainApp(); // Run the main application
+                mainApp();
             } else {
                 attempts++;
                 if (attempts > maxAttempts) {
                     clearInterval(intervalId);
-                    console.error("Fatal Error: A required library (Chart.js or date-fns) failed to load after 5 seconds.");
+                    console.error("Fatal Error: A required library (Chart.js or date-fns) failed to load after 10 seconds.");
                     document.getElementById('loading-text').innerHTML = "關鍵函式庫載入超時，請檢查網路連線並刷新頁面。";
                 }
             }
         }, 100);
     }
 
-    // Start the check when the window is fully loaded
-    window.addEventListener('load', checkAndRun);
+    // [FIX] 使用 DOMContentLoaded 來觸發檢查，而不是 load
+    document.addEventListener('DOMContentLoaded', checkAndRun);
 
     </script>
 </body>
