--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <div class="w-full max-w-2xl bg-gray-800 rounded-2xl shadow-2xl p-6 md:p-8 text-center">
         
         <!-- 主標題與狀態 -->
-        <h1 class="text-3xl md:text-4xl font-bold text-white">鄉民公道價：牛奶指數</h1>
-        <p class="text-indigo-400 mt-2">PTT 八卦版正向情緒，即時決定您的牛奶折扣！</p>
+        <h1 class="text-3xl md:text-4xl font-bold text-white">福樂指數</h1>
+        <p class="text-indigo-400 mt-2">福樂的價格 由大家的心情來決定！</p>
         <div id="connection-status" class="mt-4 text-sm text-yellow-400">正在連接伺服器...</div>
 
         <!-- 主要折扣顯示區 -->
