--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>鄉民公道價：牛奶即時折扣</title>
+    <title>福樂指數---福樂的價格 由大家的心情來決定！</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Noto+Sans+TC:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
@@ -23,8 +23,8 @@
 
     <div class="w-full max-w-2xl bg-gray-800 rounded-2xl shadow-2xl p-6 md:p-8 text-center">
         
-        <h1 class="text-3xl md:text-4xl font-bold text-white">鄉民公道價：牛奶即時折扣</h1>
-        <p class="text-indigo-400 mt-2">PTT 八卦版正向情緒，即時決定您的牛奶折扣！</p>
+        <h1 class="text-3xl md:text-4xl font-bold text-white">福樂指數</h1>
+        <p class="text-indigo-400 mt-2">福樂的價格 由大家的心情來決定！</p>
         <div id="connection-status" class="mt-4 text-sm text-yellow-400">正在連接伺服器...</div>
 
         <div class="my-8 p-8 bg-gray-900 rounded-2xl border border-indigo-500/30">
