--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
 
         <div class="mt-8">
-            <h2 class="text-lg font-bold text-white mb-2">過去一小時情緒走勢</h2>
+            <h2 class="text-lg font-bold text-white mb-2">過去一小時折扣走勢</h2>
             <div class="bg-gray-900 p-4 rounded-xl h-48">
                 <canvas id="sentimentChart"></canvas>
             </div>
