--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <div class="grid grid-cols-1 md:grid-cols-2 gap-4 text-left mt-6">
             <div class="bg-gray-700/50 p-4 rounded-lg">
-                <p class="text-sm text-gray-400">當前情緒指數 (15分鐘平均 PPI)</p>
+                <p class="text-sm text-gray-400">當前情緒指數</p>
                 <p id="ppi-display" class="text-2xl font-semibold text-white">-- %</p>
             </div>
             <div class="bg-gray-700/50 p-4 rounded-lg">
